# flatland-baselines

./: .dockerignore  Dockerfile  README.md  entrypoint_generic.sh  environment.yml  pyproject.toml  requirements-dev.txt  run.sh  run_solution.py
.github/workflows/: adrian.yaml  checks.yaml  docker.yml
demo/: README.md  docker-compose.yml
demo/evaluator/: environment.yml
flatland_baselines/deadlock_avoidance_heuristic/: Dockerfile  Dockerfile_intermediate  README.md  entrypoint.sh
flatland_baselines/deadlock_avoidance_heuristic/observation/: full_env_observation.py
flatland_baselines/deadlock_avoidance_heuristic/offline_demo/: offline.py  test_offline.py
flatland_baselines/deadlock_avoidance_heuristic/online-demo/: README.md  (+2 more)
flatland_baselines/do_nothing_heuristic/: Dockerfile  do_nothing_policy.py
flatland_baselines/forever_heuristic/: Dockerfile  forever_policy.py
flatland_baselines/forward_only_heuristic/: Dockerfile  forward_only_policy.py
flatland_baselines/random/: Dockerfile
flatland_baselines/self_attention_ppo/: flatland_self_attention_ppo.py
flatland_baselines/simple_rllib_ppo/: simple_ppo_common.py  simple_ppo_evaluation.py  simple_ppo_training.py  test_simple_ppo_training.py
flatland_baselines/tree_lstm_ppo/: flatland_training_tree_lstm_ppo.py  marl_flattened_tree_obs_for_rail_env.py  test_marl_flattened_tree_obs_for_rail_env.py
flatland_benchmarks_f3_deadlock_avoidance_baseline/policy/: deadlock_avoidance_policy.py  policy.py  random_policy.py
src/observation/: full_state_observation.py
src/policy/: deadlock_avoidance_policy.py
(+47 files in other folders)
