[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "flatland-baselines"
description = "Baselines for flatland-rl - Multi Agent Reinforcement Learning on Trains"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["flatland"]
authors = [{ name = "Flatland Association", email = "contact@flatland-association.org" }]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dependencies = [
    "flatland-rl @ git+https://github.com/flatland-association/flatland-rl.git@main",
]
dynamic = ["version"]


[project.urls]
"Homepage" = "https://www.flatland-association.org"
"Github Repository" = "https://github.com/flatland-association/flatland-baselines"
"Issue Tracker" = "https://github.com/flatland-association/flatland-baselines/issues"


[tool.setuptools.packages]
find = { }

[tool.setuptools_scm]

